# api/swagger/swagger.json
@@ -3,9 +3,6 @@
     "info": {
         "title": "go-rest-api API documentation",
         "contact": {},
-        "license": {
-            "name": "MIT"
-        },
         "version": "1.0.0"
     },
     "host": "localhost:8080",
@@ -43,7 +40,7 @@
                         }
                     },
                     "404": {
-                        "description": "Not found",
+                        "description": "Not found\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
@@ -63,6 +60,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/auth.LoginResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized\".",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ErrorResponse"
                         }
                     }
                 }
@@ -99,7 +102,7 @@
                         }
                     },
                     "401": {
-                        "description": "Invalid email or password",
+                        "description": "Invalid email or password\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
@@ -138,7 +141,7 @@
                         }
                     },
                     "404": {
-                        "description": "Not found",
+                        "description": "Not found\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
@@ -177,7 +180,7 @@
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "Unauthorized\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
@@ -216,7 +219,7 @@
                         }
                     },
                     "409": {
-                        "description": "Email already taken",
+                        "description": "Email already taken\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
@@ -262,7 +265,7 @@
                         }
                     },
                     "401": {
-                        "description": "Password reset failed",
+                        "description": "Password reset failed\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
@@ -293,7 +296,7 @@
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "Unauthorized\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
@@ -327,7 +330,7 @@
                         }
                     },
                     "401": {
-                        "description": "Verify email failed",
+                        "description": "Verify email failed\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
@@ -352,13 +355,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/healthcheck.HealthCheckResponse"
+                            "$ref": "#/definitions/healthcheck.Response"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/healthcheck.HealthCheckResponse"
+                            "$ref": "#/definitions/healthcheck.Response"
                         }
                     }
                 }
@@ -409,13 +412,13 @@
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "Unauthorized\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
                     },
                     "403": {
-                        "description": "Forbidden",
+                        "description": "Forbidden\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
@@ -451,23 +454,23 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/user.UserResponse"
+                            "$ref": "#/definitions/user.Response"
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "Unauthorized\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
                     },
                     "403": {
-                        "description": "Forbidden",
+                        "description": "Forbidden\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
                     },
                     "409": {
-                        "description": "Email already taken",
+                        "description": "Email already taken\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
@@ -503,23 +506,23 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/user.UserResponse"
+                            "$ref": "#/definitions/user.Response"
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "Unauthorized\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
                     },
                     "403": {
-                        "description": "Forbidden",
+                        "description": "Forbidden\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
                     },
                     "404": {
-                        "description": "Not found",
+                        "description": "Not found\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
@@ -557,19 +560,19 @@
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "Unauthorized\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
                     },
                     "403": {
-                        "description": "Forbidden",
+                        "description": "Forbidden\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
                     },
                     "404": {
-                        "description": "Not found",
+                        "description": "Not found\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
@@ -612,29 +615,29 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/user.UserResponse"
+                            "$ref": "#/definitions/user.Response"
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "Unauthorized\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
                     },
                     "403": {
-                        "description": "Forbidden",
+                        "description": "Forbidden\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
                     },
                     "404": {
-                        "description": "Not found",
+                        "description": "Not found\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
                     },
                     "409": {
-                        "description": "Email already taken",
+                        "description": "Email already taken\".",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorResponse"
                         }
@@ -848,7 +851,7 @@
                 }
             }
         },
-        "healthcheck.HealthCheckResponse": {
+        "healthcheck.Response": {
             "type": "object",
             "properties": {
                 "checks": {
@@ -924,6 +927,26 @@
                 }
             }
         },
+        "user.Response": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Operation completed successfully"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "success"
+                },
+                "user": {
+                    "$ref": "#/definitions/user.User"
+                }
+            }
+        },
         "user.UpdateUserPasswordRequest": {
             "type": "object",
             "properties": {
@@ -979,26 +1002,6 @@
                 },
                 "verified_email": {
                     "type": "boolean"
-                }
-            }
-        },
-        "user.UserResponse": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer",
-                    "example": 200
-                },
-                "message": {
-                    "type": "string",
-                    "example": "Operation completed successfully"
-                },
-                "status": {
-                    "type": "string",
-                    "example": "success"
-                },
-                "user": {
-                    "$ref": "#/definitions/user.User"
                 }
             }
         },
